@@ -6,6 +6,9 @@
 - New translation for the engine strings in Russian
   (thanks Yuri Kozlov)
 
+- DinkC: load_palette() now searches for palette in the right place
+  (thanks scratcher for the report)
+
 
 108.2
 =====
